<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pitt.sfc17.androidtrivia.edu.pitt.sfc17.androidtrivia.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <Switch
            android:id="@+id/musicSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="false"
            android:gravity="end"
            android:showText="true"
            android:text="@string/playMusic"
            android:textOff="@string/off"
            android:textOn="@string/on" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="playOnClick"
            android:text="@string/play"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="167dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addWordOnClick"
            android:text="@string/addWord"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="108dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="scoreHistoryOnClick"
            android:text="@string/scoreHistory"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="46dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
