<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addTitle"
        android:gravity="center" />

    <EditText
        android:id="@+id/term_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/term"
        android:inputType="text" />

    <EditText
        android:id="@+id/definition_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/definition"
        android:inputType="text" />

    <Button
        android:id="@+id/addWordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="addClick"
        android:text="@string/submit" />

</android.support.v7.widget.LinearLayoutCompat>